Fixed footer having a gap without the version timestamp

--- a/src/themes/flylight.less
+++ b/src/themes/flylight.less
@@ -104,8 +104,8 @@
   --dimmed: #acacac;
 }
 
-.ssr-page-container.svelte-1yd7hvc {
-  min-height: calc(100vh - 10rem);
+div.ssr-page-container {
+  min-height: calc(100vh - 9rem) !important;
 }
 
 input {
