--- a/src/themes/mirror-low.less
+++ b/src/themes/mirror-low.less
@@ -22,7 +22,7 @@ body {
 }
 
 // Navigator
-.ssr-page-container.svelte-y3wm0x {
+nav.ssr-page-container {
     padding: .5rem;
     height: 4rem !important;
     box-shadow: 2px 3px 9px rgba(0, 0, 0, 0.11) !important;
@@ -38,8 +38,8 @@ body {
     }
 }
 
-.ssr-page-container.svelte-1yd7hvc {
-    min-height: calc(100vh - 10rem);
+div.ssr-page-container {
+    min-height: calc(100vh - 9rem) !important;
 }
 
 .player-score .captor-clan .badge {
