--- a/src/themes/mirror.less
+++ b/src/themes/mirror.less
@@ -44,8 +44,8 @@ nav.ssr-page-container {
     }
 }
 
-.ssr-page-container.svelte-1yd7hvc {
-    min-height: calc(100vh - 10rem);
+div.ssr-page-container {
+    min-height: calc(100vh - 9rem) !important;
 }
 
 .is-multiline {
