--- a/src/themes/ree-dark.less
+++ b/src/themes/ree-dark.less
@@ -48,7 +48,7 @@ nav.ssr-page-container {
 }
 
 div.ssr-page-container {
-  min-height: calc(100vh - 9.9rem) !important;
+  min-height: calc(100vh - 9rem) !important;
 }
 
 //endregion
