--- a/src/themes/unbounded.less
+++ b/src/themes/unbounded.less
@@ -34,7 +34,7 @@ body {
   }
 
 // Navigator
-.ssr-page-container.svelte-y3wm0x {
+nav.ssr-page-container {
     padding: .5rem;
     height: 4rem !important;
     box-shadow: 2px 3px 9px rgba(0, 0, 0, 0.11) !important;
@@ -49,6 +49,10 @@ body {
         // margin: 5px;
     }
 }
+
+div.ssr-page-container {
+    min-height: calc(100vh - 9rem) !important;
+  }
 
 // All Player grids
 .ranking-grid,
